After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 397679 - Odd zero sized graph objects
Odd zero sized graph objects
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Main System
1.7.x
Other All
: Normal major
: ---
Assigned To: Morten Welinder
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2007-01-17 16:45 UTC by Julian
Modified: 2007-10-29 12:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Gnumeric created file that now crashes on open in 1.76 on Windows (313.32 KB, application/x-gnumeric)
2007-01-17 16:47 UTC, Julian
Details

Description Julian 2007-01-17 16:45:45 UTC
Gnumeric 1.76 crashes on a previously created in Gnumeric file. The file was created in Aug 06, so was probably using either 1.63 or 1.70

There is nothing special in the file, a few tables and charts, and using 4 coloured sheets

I will attach the file, if I can do so.

The files crashes completely on open in Windows, using 1.76 and crashes when looking at one of the sheets in Linux version 1.70 in Ubuntu Edgy Eft 6.10
Comment 1 Julian 2007-01-17 16:47:17 UTC
Created attachment 80523 [details]
Gnumeric created file that now crashes on open in 1.76 on Windows
Comment 2 Julian 2007-01-17 16:50:51 UTC
Just noticed that many of the charts dont get shown too, when using this version. This seems to be true of both Windows 1.76 and linux 1.70 versions.
Comment 3 Morten Welinder 2007-01-17 18:09:45 UTC
Confirmed.
Comment 4 Morten Welinder 2007-01-17 18:28:28 UTC
Partially fixed in HEAD.  The "sax" reader which is now the default in 1.7.6
still has a few issues.  You can probably select the old loader in the open
dialog.

Please file graph issues separately.
Comment 5 Morten Welinder 2007-01-17 19:04:50 UTC
Fixed in the development version. The fix will be available in the next major release. Thank you for your bug report.
Comment 6 Jody Goldberg 2007-01-21 02:51:50 UTC
we won't crash displaying the charts with newer cairo's now.
Comment 7 Jody Goldberg 2007-01-21 03:12:51 UTC
The paliative in goffice avoids a crash loading this file, and I'll put in something at a higher level too, but there is still some significant strangeness in here.

SheetObjectGraph ObjectBound="G14" ObjectOffset="0 0 0 0"
SheetObjectGraph ObjectBound="A14:G14" ObjectOffset="0.101 0 0 0"

in Graph 45

Those have zero height.

How did this file get generated ?
Comment 8 Jody Goldberg 2007-10-28 02:16:45 UTC
Without more info we're not going to get to the source of the faulty data.
We no longer crash.  I'll close until there is a response.
Comment 9 Julian 2007-10-29 12:09:32 UTC
I generated the file myself in an earlier version of Gnumeric. Not sure which, but probably 1.6.3 or 1.7.0 or 1.7.1.

In Ubuntu Gutsy 1.7.11 it works fine.